<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@id/loginFragment">



    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoestore_starter.ui.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoestore_starter.ui.welcome.WelcomeFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome" >
        <action
            android:id="@+id/action_welcomeFragment_to_illustrationFragment"
            app:destination="@id/illustrationFragment" />
    </fragment>
    <fragment
        android:id="@+id/illustrationFragment"
        tools:layout="@layout/fragment_illustration"
        android:name="com.example.shoestore_starter.ui.illustration.IllustrationFragment"
        android:label="@string/illustration" >
        <action
            android:id="@+id/action_illustrationFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.shoestore_starter.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_addShoeFragment"
            app:destination="@id/addShoeFragment" />
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        tools:layout="@layout/fragment_add_shoe"
        android:id="@+id/addShoeFragment"
        android:name="com.example.shoestore_starter.ui.addshoe.AddShoeFragment"
        android:label="Add Shoe" >
        <action
            android:id="@+id/action_addShoeFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
</navigation>