<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.illustration.IllustrationFragment">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_onboarding"
            android:id="@+id/onboarding_img"/>

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/onboarding_img"
            android:text="@string/choose_item"
            style="@style/header_text" />

        <TextView

            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:id="@+id/description"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_title"
            android:text="@string/description"
            style="@style/description_text" />



        <Button
            android:id="@+id/proceed"
            style="@style/rounded_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/proceed"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/description" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>